--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body{
 .times-container{
   
   width:100%;
-  height: 375px;
+  height: 53vh;
   overflow: scroll;
 }
 .times-container::-webkit-scrollbar {
@@ -126,6 +126,8 @@ body{
   padding: 4px;
   display: flex; 
  justify-content: space-between;
+ align-items: center;
+
 }
 .scramble{
  max-width: 65%;
@@ -164,7 +166,7 @@ body{
     border-color: transparent;
     border-radius: 10px;
     padding: 5px;
-    margin: 5px;
+    margin: 40px;
     font-size: x-large;
     width: 5%;
 }
@@ -181,6 +183,22 @@ body{
   background-color: rgb(252, 200, 137);
 }
 
-.block-container{
+@media only screen and (max-width: 900px) {
+  .center-average,.center-average12 {
+      display: none;
+  }
+  .times-container,.outer-container{
+    position: absolute;
+    left:50%;
   
+  transform: translate(-50%,0);
+  }
 }
+
+@media only screen and (max-height: 475px) {
+  .center-average,.center-average12 {
+      display: none;
+  }
+ 
+}
+
