--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
 body{
-  background-color: rgb(252, 200, 137);
+  background-color: rgb(74, 87, 89);
   text-align: center;
   color: white;
   align-items: center;
   justify-content: center;
 }
 
+.vertical-flex{
+ display:flex;
+ flex-direction: column;
+}
+
 .outer-container {
   
   width:270px;
-  height: 70%;
+  /* height: 65%; */
   padding: 10px;
   margin: 5px;
-  
-  background-color: burlywood;
+  margin-top: 10px;
+  background-color:rgb(154, 165, 155);
   border-radius: 10px;
   justify-content: center;
   color: white;
@@ -24,8 +29,9 @@ body{
 .times-container{
   
   width:100%;
-  height: 52vh;
+  height: calc(100vh - 350px);
   overflow: scroll;
+  flex-shrink: 1;
 }
 .times-container::-webkit-scrollbar {
   display: none;
@@ -36,14 +42,17 @@ body{
  border-color: transparent;
  background-color: transparent;
  border-radius: 5px;
+ margin: 5px;
   
 }
+
 .buttons:hover{
-  background-color: rgb(221, 195, 160);
+  background-color:rgb(177, 189, 178);
 }
+
 .time{
   font-size: 60px;
-  background-color: rgb(198, 115, 115);
+  background-color: rgb(154, 165, 155);
   border-radius: 7px;
   margin: 5px;
   
@@ -53,7 +62,7 @@ body{
   width: 99%;
   height: 40%;
   font-size: 200px;
-  background-color: rgb(198, 115, 115);
+  background-color: rgb(154, 165, 155);
   border-radius: 7px;
   position: absolute;
   top:30%;
@@ -61,7 +70,7 @@ body{
  
 }
 
-.time-container{
+/* .time-container{
   justify-content: center;
   background-color: rgb(109, 86, 86);
   color: white;
@@ -69,7 +78,7 @@ body{
   margin: 5px;
   
   width:100px ;
-}
+} */
 
 .time-list-item{
   
@@ -84,7 +93,7 @@ body{
 }
 
 .time-list-item:hover{
-  background-color: rgb(221, 195, 160);
+  background-color: rgb(177, 189, 178);
 }
 .time-flex{
   display: grid;
@@ -127,6 +136,7 @@ body{
   display: flex; 
  justify-content: space-between;
  align-items: center;
+ 
 
 }
 .scramble{
@@ -148,6 +158,7 @@ body{
   display: none;
 }
 
+
 .event{
   padding-right: 15px;
   text-align: center;
@@ -156,8 +167,9 @@ body{
   width: 15%;
   height: 60px;
   border-color: transparent;
-  background-color: burlywood;
+  background-color: rgb(66, 78, 80);
   color: white;
+  
 }
 
 .scramble-buttons{
@@ -166,21 +178,23 @@ body{
     border-color: transparent;
     border-radius: 10px;
     padding: 5px;
-    margin: 40px;
+    margin-right: 30px;
+    margin-left: 30px;
     font-size: x-large;
     width: 5%;
 }
 
 .scramble-buttons:hover{
-  background-color: rgb(252, 211, 162);
+  background-color: rgb(66, 78, 80);
 }
 
 .last{
-  color:rgb(255, 230, 199);
+  
+  color:rgb(116, 127, 132);
 }
 
 .last:hover{
-  background-color: rgb(252, 200, 137);
+  background-color: rgb(74, 87, 89);
 }
 
 /* @media only screen and (max-width: 1000px) {
@@ -204,6 +218,7 @@ body{
 } */
 .averages-container{
   margin-right:  100px;
+  
 }
 
 .block-container{
@@ -216,7 +231,9 @@ body{
 .sessions{
   border-radius: 5px;
   color: white;
-  background-color:rgb(214, 167, 106);
+  background-color:rgb(134, 144, 134);
 
   border-color: transparent;
 }
+
+
