--- a/src/modal.css
+++ b/src/modal.css
@@ -40,6 +40,11 @@ body.active-modal {
     top: 20px;
     right: 30px;
     padding: 5px 7px;
+    color: rgb(154, 165, 155);
+}
+
+.close-modal:hover {
+    background-color:rgb(65, 75, 77) ;
 }
 
 .modal-button{
@@ -51,7 +56,7 @@ body.active-modal {
     width: 400px;
     padding: 20px;
     border-radius: 10px;
-    background-color: burlywood;
+    background-color: rgb(74, 87, 89);
     text-align: center;
     
     
@@ -70,12 +75,13 @@ body.active-modal {
 }
 
 .hide{
-    visibility: hidden;
+    display: none;
+    
 }
 
 .modal-scramble{
     padding:7px;
-    background-color:rgb(218, 197, 169);  
+    background-color:rgb(154, 165, 155);  
     border-radius: 10px;
 }
 .modifier-buttons{
@@ -84,7 +90,7 @@ body.active-modal {
 }
 .modifier-button{
     color:white;
-    background-color:rgb(218, 197, 169) ;
+    background-color:rgb(154, 165, 155) ;
     border-color: transparent;
     border-radius: 10px;
     padding: 5px;
@@ -93,7 +99,7 @@ body.active-modal {
     width: 30%;
 }
 .modifier-button:hover{
-    border-color:rgba(90, 88, 88, 0.095);
+    border-color:rgb(123, 133, 124);
 }
 
 .active{
