--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ body{
 .times-container{
   
   width:100%;
-  height: calc(100vh - 350px);
+  height: calc(100vh - 395px);
   overflow: scroll;
   flex-shrink: 1;
 }
@@ -112,22 +112,14 @@ body{
 }
 
 .center-average{
-  /* justify-content: center;
-  position:absolute;
-  left:50%;
-  top: 30%;
-  transform: translate(-50%,0); */
-  
+  margin-top: 0px;
+  margin-bottom: 20;
   font-size: 500%;
 }
 
 .center-average12{
-  /* justify-content: center;
-  position:absolute;
-  left:50%;
-  top: 50%;
-  transform: translate(-50%,0); */
-  
+  margin-top: 0px;
+  margin-bottom: 0;
   font-size: 500%;
 }
 
@@ -141,7 +133,7 @@ body{
 }
 .scramble{
  max-width: 65%;
-  max-height: 100px;
+  max-height: 95px;
   /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
   font-size:180%;
   overflow: scroll;
@@ -149,7 +141,7 @@ body{
 }
 
 .small{
-  font-size: larger;
+  font-size: large;
   word-spacing: 5px;
   font-weight: lighter;
 }
@@ -197,11 +189,11 @@ body{
   background-color: rgb(74, 87, 89);
 }
 
-/* @media only screen and (max-width: 1000px) {
-  .center-average,.center-average12 {
+
+  /* .center-average,.center-average12 {
       display: none;
       
-  } */
+  }} */
  /* .outer-container{
     position:relative;
     left:50%;
@@ -225,7 +217,9 @@ body{
   display: flex;
   align-items: center;
   
-  gap: 18vw
+  gap: 18vw;
+  
+
 }
 
 .sessions{
@@ -237,3 +231,12 @@ body{
 }
 
 
+@media only screen and (max-height: 650px) {
+  .block-container{
+    align-items:flex-start;
+  }}
+
+.logo{
+  height: 6vh;
+}
+ 
