--- a/src/App.css
+++ b/src/App.css
@@ -9,34 +9,50 @@ body{
 .vertical-flex{
  display:flex;
  flex-direction: column;
+ height: 98vh;
+}
+
+.small-bar{
+ display:flex;
+ flex-direction: column;
+ align-items: center;
 }
 
 .outer-container {
-  
+  display:flex;
+  flex-direction:column;
+  justify-content:flex-start;
   width:270px;
-  /* height: 65%; */
   padding: 10px;
   margin: 5px;
   margin-top: 10px;
   background-color:rgb(154, 165, 155);
   border-radius: 10px;
-  justify-content: center;
   color: white;
+  flex-grow: 1;
+  flex-shrink:1;
+  overflow:scroll;
+  height:100%;
   
 
   
 }
+
+.running-average-container {
+  margin-top: auto; /* This pushes the last child to the bottom */
+}
+
 .times-container{
-  
   width:100%;
-  height: calc(100vh - 395px);
   overflow: scroll;
-  flex-shrink: 1;
 }
 .times-container::-webkit-scrollbar {
   display: none;
 }
 
+.outer-container::-webkit-scrollbar {
+  display: none;
+}
 .buttons{
  outline: none;
  border-color: transparent;
@@ -64,8 +80,12 @@ body{
   font-size: 200px;
   background-color: rgb(154, 165, 155);
   border-radius: 7px;
-  position: absolute;
+  position: fixed;
   top:30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
   
  
 }
@@ -126,13 +146,14 @@ body{
 .top-container{
   padding: 4px;
   display: flex; 
+  width:98vw;
  justify-content: space-between;
  align-items: center;
  
 
 }
 .scramble{
- max-width: 65%;
+ max-width: 90%;
   max-height: 95px;
   /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
   font-size:180%;
@@ -170,7 +191,7 @@ body{
     border-color: transparent;
     border-radius: 10px;
     padding: 5px;
-    margin-right: 30px;
+    margin-right: 40px;
     margin-left: 30px;
     font-size: x-large;
     width: 5%;
@@ -200,27 +221,27 @@ body{
   
   transform: translate(-50%,0);
   } */
-/* }
+/* /* } */
 
-@media only screen and (max-height: 475px) {
-  .center-average,.center-average12 {
-      display: none;
-  }
- 
-} */
 .averages-container{
   margin-right:  100px;
+  position: absolute;
+  top:45%;
+  left:45%;
+
   
 }
 
-.block-container{
-  display: flex;
-  align-items: center;
-  
-  gap: 18vw;
-  
-
-}
+/* .block-container{ display: flex; */
+/*   align-items: center; */
+/*   flex-grow: 1; */
+/*   flex-shrink:1; */
+/*    */
+/*   /* height: calc(100vh - 395px); */ */
+/*   gap: 18vw; */
+/*    */
+/**/
+/* } */
 
 .sessions{
   border-radius: 5px;
@@ -238,5 +259,67 @@ body{
 
 .logo{
   height: 6vh;
+  margin-right: 10px;
 }
  
+.scramble-flex{
+  display: none;
+  align-items: center;
+}
+
+.hide{
+  display: none;
+}
+
+.scramble-container{
+  display:flex;
+  justify-content: space-around;
+}
+
+@media only screen and (max-width: 1080px) {
+  .scramble-flex{
+      display: flex;
+  }
+  .scramble-container{
+    display: none;
+  }
+  .top-container{
+    justify-content: center;
+  }
+  .time-running{
+    font-size:150px
+  }
+ 
+} 
+
+@media only screen and (max-width: 680px) {
+  .scramble{
+    font-size: 20px;
+  }
+  .scramble-buttons{
+    font-size: 12px;
+  }
+  .averages-container{
+    display:none;
+  }
+  .vertical-flex{
+    align-items:center;
+  }
+  .time{
+    width: 100vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .time-running{
+    background-color: rgb(74, 87, 89);
+    left: 2px;
+    font-size: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+  .scramble-flex{
+    flex-direction: column;
+  }
+  }
+
+
